tests/type_errors/record_merge_pick.sy
mod A

def main : _ : = let { a } = { a: "ABC" } in a + 1

--+ expected exit status: 7
--+ expected stderr:
--+ > The requirements are not valid here.
--+ 
--+ '@ Str' 
--+ is not
--+ (class '@ Num')
--+ 
--+ tests/type_errors/record_merge_pick.sy
--+   3| def main : _ : = let { a } = { a: "ABC" } in a + 1
--+                                                     ^

